# synapse

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  Synapse.spec  config.json  pyproject.toml  requirements.txt  run_synapse.py
.claude/: settings.local.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml
synapse/: app.py  autostart.py  config.py  editor.py  i18n.py  lang.py  lang_picker.py  popup.py  setup_key.py  tray.py  trigger.py
synapse/providers/: __init__.py  anthropic_direct.py  base.py  keys.py  openrouter.py
translato/: app.py  autostart.py  config.py  editor.py  i18n.py  lang.py  lang_picker.py  popup.py  setup_key.py  tray.py
translato/providers/: __init__.py  anthropic_direct.py  base.py  keys.py  openrouter.py
